@@ -4,6 +4,8 @@ import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
+import org.bukkit.entity.Player;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -12,7 +14,7 @@ import java.util.stream.Collectors;
 public class VanishTabCompleter implements TabCompleter {
 
     @Override
-    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
+    public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, String[] args) {
         List<String> completions = new ArrayList<>();
 
         if (args.length == 1) {
@@ -22,8 +24,8 @@ public class VanishTabCompleter implements TabCompleter {
 
             if (sender.hasPermission("xutils.vanish.others")) {
                 completions.addAll(Bukkit.getOnlinePlayers().stream()
-                        .map(player -> player.getName())
-                        .collect(Collectors.toList()));
+                        .map(Player::getName)
+                        .toList());
             }
 
             return completions.stream()
